adding gobot on hackday

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1358,7 +1358,23 @@
 						  <p>If you've ever considered a startup, this informal presentation is one you can't afford to miss.</p>
                       </div>
 				  </div>
-                  </div>
+			  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Location: Hack Rooms</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">
+                           Hardware Hack Lab - by Gobot.io
+                        </span>
+                      </div>
+                      <div class="abstract">
+                        <p>Want to hack hardware using Golang? Come to the Gophercon "Hardware Lending Lab" where we will have a bunch of Intel Edison single board computers, Sphero robots, Leap Motion gestural controllers, and more that you can borrow and program with your favorite language. Mentors Ron Evans (@deadprogram) and Adrian Zankich (@adzankich), the creators of Gobot (http://gobot.io) will be there to help out. There will be some cool giveaways too. Come play with us!</p>
+                      </div>
+				  </div>
+			  </div>
                          <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">Afternoon</span>
