--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1449,7 +1449,8 @@
                 <br />Code: GopherCon</p>
             </div>
             <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
+              <a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/D/DENDDGI-GOPHER-20150705/index.jhtml" class="btn btn-orange"
+              target="_blank">Book</a>
             </div>
           </section>
         </div>
@@ -1465,7 +1466,8 @@
                 <br />Code: GopherCon</p>
             </div>
             <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
+              <a href="http://doubletree.hilton.com/en/dt/groups/personalized/D/DENCHDT-GCG-
+20150705/index.jhtml?WT.mc_id=POG" class="btn btn-orange" target="_blank">Book</a>
             </div>
           </section>
         </div>
