fixing hotel availability

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1412,7 +1412,7 @@
               <p>
                 <b>$169.00</b>/ night, plus tax</p>
               <p>550 15th Street,
-                <br />Denver, CO 80202</p>
+                br />Denver, CO 80202</p>
               <p>Tel: 800.445.8667
                 <br />Code: GopherCon</p>
             </div>
@@ -1483,8 +1483,7 @@
                 <br />Code: GopherCon</p>
             </div>
             <div style="float:right">
-              <a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DENESES-GOP-
-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a>
+              <div class="btn btn-danger" target="_blank">Sold Out!</div>
             </div>
           </section>
         </div>
