--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1412,7 +1412,7 @@
               <p>
                 <b>$169.00</b>/ night, plus tax</p>
               <p>550 15th Street,
-                br />Denver, CO 80202</p>
+                <br />Denver, CO 80202</p>
               <p>Tel: 800.445.8667
                 <br />Code: GopherCon</p>
             </div>
