--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -415,7 +415,7 @@
                   <h4>
                     <a href="/speakers/blake-caldwell">Blake Caldwell</a>
                   </h4>
-                  <span class="title">Developer, Fog Creek Software</span>
+                  <span class="title">Developer, CloudHelix, Inc.</span>
                   <div class="handle"></div>
                 </div>
               </div>
