Make date/time of After-Party more clear, add CFP for Lightning Talks to homepage

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -35,7 +35,13 @@
             <div class="col-md-6">
               <img class="animated slideInDown" src="images/gc15-logo.svg" alt="GopherCon 2015" title="GopherCon 2015" width="500" />
             </div>
-            <div class="speaker-section col-md-3">
+            <div class="tickets-section col-md-3">
+              <div>
+                <h3>Lightning Talks</h3>
+                <p>Interested in presenting a lightning talk on Hack Day?</p>
+                <a href="https://gophercon.typeform.com/to/c6GOUe" class="btn btn-blue" target="_blank">Become a Speaker</a>
+              </div>
+              <br />
               <section class="countdown">
                 <script src="countdown/countdown.js" type="text/javascript"></script>
                 <script type="application/javascript">
@@ -64,6 +70,7 @@
                         });
                 </script>
               </section>
+            
             </div>
           </div>
         </div>
@@ -102,7 +109,7 @@
                   </h3>
                 </div>
                 <h4>
-                  <strong>Work Shop</strong>(Optional)</h4>
+                  <strong>Work Shop</strong> (Optional)</h4>
                 <p>Optional workshop day. Workshops to be announced soon.</p>
               </div>
             </div>
@@ -115,7 +122,7 @@
                   </h3>
                 </div>
                 <h4>
-                  <strong>Main Event</strong>(Day 1)</h4>
+                  <strong>Main Event</strong> (Day 1)</h4>
                 <p>Featuring our first day of guest speakers talks and presentations.</p>
               </div>
             </div>
@@ -128,7 +135,7 @@
                   </h3>
                 </div>
                 <h4>
-                  <strong>Main Event</strong>(Day 2)</h4>
+                  <strong>Main Event</strong> (Day 2)</h4>
                 <p>Our second and last day of guest speakers talks and presentations.</p>
               </div>
             </div>
@@ -141,7 +148,7 @@
                   </h3>
                 </div>
                 <h4>
-                  <strong>Hack Day</strong>(Optional)</h4>
+                  <strong>Hack Day</strong> (Optional)</h4>
                 <p>Optional (but highly recommended) hack day. Socialize and work with your Go friends.</p>
               </div>
             </div>
@@ -961,6 +968,27 @@
                         <p>Often our understanding of a language’s features and the intentions thereof are limited by our understanding of its roots.</p>
                         <p>In this talk, BG will talk about the origins of the core ideas behind Go and will take you on a “language-archeology” tour
                           where we’ll trace the roots of Go.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">8:00pm - 11:00pm</span>
+                      <span class="location">Location: <br /><a href="http://www.wynkoop.com/">Wynkoop Brewing Company</a>
+                      <br />1634 18th St.<br />Denver, CO 80202</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">
+                          <a href="/events/after-party">Official After Party</a>
+                        </span>
+                      </div>
+                      <div class="abstract">
+                      <p>This evening’s offsite event will once again take place at the Wynkoop Brewing Company, Colorado’s oldest brew pub.</p>
+                      <p>Upon arrival, guests will enter the main level where a large bar and ample seating is available. Just beyond the bar, the Mercantile Room will host a special tasting area for the evening. For guests that want to learn more about Colorado’s local brewery explosion, four (4) professional beer experts will be on-hand to answer questions on all matters of beer, including brewing processes, storage, serving, and sampling. Hops and grains such as wheat, barley and rye will be displayed in glass containers, while tasting notes will allow guests to have an interactive and hands-on experience under the guidance of our brew experts.</p>
+                      <p>In addition to the main level, guests will have use of the Wynkoop’s entire second floor pool hall. This expansive space features a large bar, ample seating, dartboards, pool tables, table shuffleboard, and foosball.</p>
+                      <p><a href="http://www.wynkoop.com/">Wynkoop Brewing Company</a>
+                      <br />1634 18th St.<br />Denver, CO 80202</p>
                       </div>
                     </div>
                   </div>
