adding hotels back

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1423,97 +1423,69 @@
               </div>
             </div>
       </section>{{ partial "sponsors.html" . }}
-      <section id="hotels" class="content hotels">
-        <div class="container">
-          <div class="col-md-10 col-md-offset-1 text-center">
-            <h1>Hotel Accommodations</h1>
-            <p class="subheader">We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links,
-              phone numbers, or booking codes below to get the reduced rates.
-              <br />If you have any trouble, call
-              <strong>1-866-650-8858</strong>for help!</p>
-          </div>
+    <section id="hotels" class="content hotels">
+    	<div class="container">
+        	<div class="col-md-10 col-md-offset-1 text-center">
+                <h1>Hotel Accommodations</h1>
+                <p class="subheader">We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. <br /> If you have any trouble, call <strong>1-866-650-8858</strong> for help!</p>
+        	</div>
         </div>
+
+
         <div class="hampton col-md-2">
-          <h4>Hampton Inn</h4>
-          <section>
-            <div style="float:left">
-              <p>
-                <b>$169.00</b>/ night, plus tax</p>
-              <p>550 15th Street,
-                <br />Denver, CO 80202</p>
-              <p>Tel: 800.445.8667
-                <br />Code: GopherCon</p>
-            </div>
-            <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
-            </div>
-          </section>
-        </div>
-        <div class="homewood col-md-2">
-          <h4>Homewood Suites</h4>
-          <section>
-            <div style="float:left">
-              <p>
-                <b>$179.00</b>/ night, plus tax</p>
-              <p>550 15th Street,
-                <br />Denver, CO 80202</p>
-              <p>Tel: 800.445.8667
-                <br />Code: GopherCon</p>
-            </div>
-            <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
-            </div>
-          </section>
+        	<h4>Hampton Inn</h4>
+        	<section>
+				<div style="float:left"><p><b>$169.00</b> / night, plus tax</p>
+                <p>550 15th Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+							<div style="float:right"><div class="btn btn-danger" target="_blank">Sold Out!</div></div>
+            </section>
+		</div>
+		        <div class="homewood col-md-2">
+        	<h4>Homewood Suites</h4>
+        	<section>
+			<div style="float:left"><p><b>$179.00</b> / night, plus tax</p>
+				<p>550 15th Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-
+20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
+            </section>
         </div>
         <div class="hilton col-md-2">
-          <h4>Hilton Garden Inn</h4>
-          <section>
-            <div style="float:left">
-              <p>
-                <b>$189.00</b>/ night, plus tax</p>
-              <p>1400 Welton Street,
-                <br />Denver, CO 80202</p>
-              <p>Tel: 855.215.1283
-                <br />Code: GopherCon</p>
-            </div>
-            <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
-            </div>
-          </section>
+        	<h4>Hilton Garden Inn</h4>
+        	<section>
+				<div style="float:left"><p><b>$189.00</b> / night, plus tax</p>
+                <p>1400 Welton Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 855.215.1283<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/D/DENDDGI-GOPHER-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
+            </section>
         </div>
+
         <div class="curtis col-md-2">
-          <h4>The Curtis</h4>
-          <section>
-            <div style="float:left">
-              <p>
-                <b>$199.00</b>/ night, plus tax</p>
-              <p>1405 Curtis Street,
-                <br />Denver, CO 80202</p>
-              <p>Tel: 800.445.8667
-                <br />Code: GopherCon</p>
-            </div>
-            <div style="float:right">
-              <a href="http://doubletree.hilton.com/en/dt/groups/personalized/D/DENCHDT-GCG-
-20150705/index.jhtml?WT.mc_id=POG" class="btn btn-orange" target="_blank">Book</a>
-            </div>
+        	<h4>The Curtis</h4>
+        	<section>
+				<div style="float:left"><p><b>$199.00</b> / night, plus tax</p>
+                <p>1405 Curtis Street,<br /> Denver, CO 80202</p>
+				<p>Tel: 800.445.8667<br />
+					Code: GopherCon</p></div>
+				<div style="float:right"><a href="http://doubletree.hilton.com/en/dt/groups/personalized/D/DENCHDT-GCG-
+20150705/index.jhtml?WT.mc_id=POG" class="btn btn-orange" target="_blank">Book</a></div>
+            </section>
+		</div>
+    <div class="embassy col-md-2">
+        <h4>Embassy Suites</h4>
+        <section>
+      <div style="float:left"><p><b>$205.00</b> / night, plus tax</p>
+              <p>1420 Stout Street,<br /> Denver, CO 80202</p>
+      <p>Tel: 800.445.8667<br />
+        Code: GopherCon </p></div>
+      <div style="float:right"><a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DENESES-GOP-
+20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
           </section>
-        </div>
-        <div class="embassy col-md-2">
-          <h4>Embassy Suites</h4>
-          <section>
-            <div style="float:left">
-              <p>
-                <b>$205.00</b>/ night, plus tax</p>
-              <p>1420 Stout Street,
-                <br />Denver, CO 80202</p>
-              <p>Tel: 800.445.8667
-                <br />Code: GopherCon</p>
-            </div>
-            <div style="float:right">
-              <div class="btn btn-danger" target="_blank">Sold Out!</div>
-            </div>
-          </section>
-        </div>
-        <div class="clearfix"></div>
-      </section>
-    </main>{{ partial "footer.html" . }}
+      </div>
+
+      <div class="clearfix"></div>
+  </section>    </main>{{ partial "footer.html" . }}
