Typos and Docker workshop

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -90,9 +90,8 @@
             <div class="col-md-10 col-md-offset-1">
               <h1>July 7th - 10th, 2015 in Denver, CO</h1>
               <p class="subheader">
-                <b>GopherCon</b>It's the largest event in the world dedicated solely to the Go programming language. It's attended by the best
-                and the brightest of the Go team and community. Join us as 1,500 gophers converge on
-                <strong>Denver, Colorado</strong>for 3 full days of talks, events, &amp; hacking.</p>
+                <b>GopherCon</b>, , It is the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. Join us as 1,500 gophers converge on <strong>Denver, Colorado</strong> for 3 full days of talks, events, &amp; hacking. Join us as 1,500 gophers converge on
+              </p>
             </div>
           </div>
         </div>
@@ -110,7 +109,7 @@
                 </div>
                 <h4>
                   <strong>Work Shop</strong> (Optional)</h4>
-                <p>Optional workshop day. Workshops to be announced soon.</p>
+                <p>We are offering two workshop tracks, an all day bootcamp and an assorted track.</p>
               </div>
             </div>
             <div class="col-md-3">
@@ -1400,6 +1399,22 @@
                       </div>
                       <div class="abstract">
                         <p>Want to hack hardware using Golang? Come to the Gophercon "Hardware Lending Lab" where we will have a bunch of Intel Edison single board computers, Sphero robots, Leap Motion gestural controllers, and more that you can borrow and program with your favorite language. Mentors Ron Evans (@deadprogram) and Adrian Zankich (@adzankich), the creators of Gobot (http://gobot.io) will be there to help out. There will be some cool giveaways too. Come play with us!</p>
+                      </div>
+				  </div>
+			  </div>
+        <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Location: Hack Rooms</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+                      <div class="schedule-item-summary">
+                        <span class="title">
+                          Docker Workshop
+                        </span>
+                      </div>
+                      <div class="abstract">
+                        <p>The Docker Workshop is a 1 day, hands-on class for beginners who want to learn to use and contribute to Docker. Members of the Docker Team will get you up to speed on the basics and coach you from setup to integrating Docker into your working environment. You’ll also learn your way around the Docker Project and leave with the resources to make your first contribution.</p>
                       </div>
 				  </div>
 			  </div>
