--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -395,10 +395,10 @@
                   <h4>
                     <a href="/speakers/tomas-senart">Tomás Senart</a>
                   </h4>
-                  <span class="title">Software Engineer and Author of
+                  <span class="title">Software Engineer at Mesosphere and Author of
                     <a href="https://github.com/tsenart/vegeta">Vegeta</a>
                   </span>
-                  <div class="handle"></div>
+                  <div class="handle">https://twitter.com/tsenart</div>
                 </div>
               </div>
             </div>
