--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -398,7 +398,9 @@
                   <span class="title">Software Engineer at Mesosphere and Author of
                     <a href="https://github.com/tsenart/vegeta">Vegeta</a>
                   </span>
-                  <div class="handle">https://twitter.com/tsenart</div>
+				  <div class="handle">
+				    <a href="http://twitter.com/tsenart"><i class="fa fa-twitter"></i></a>
+				  </div>
                 </div>
               </div>
             </div>
