Fixing intro text

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -90,7 +90,7 @@
             <div class="col-md-10 col-md-offset-1">
               <h1>July 7th - 10th, 2015 in Denver, CO</h1>
               <p class="subheader">
-                <b>GopherCon</b>, , It is the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. Join us as 1,500 gophers converge on <strong>Denver, Colorado</strong> for 3 full days of talks, events, &amp; hacking. Join us as 1,500 gophers converge on
+                <b>GopherCon</b>, It is the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. Join us as 1,500 gophers converge on <strong>Denver, Colorado</strong> for 3 full days of talks, events, &amp; hacking.
               </p>
             </div>
           </div>
