Add specific ballroom sections

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -652,7 +652,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">8:30am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -666,7 +666,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">8:40am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -688,7 +688,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">9:30am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -723,7 +723,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:40am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -748,7 +748,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">11:15am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -780,7 +780,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">11:50am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -805,6 +805,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">12:20pm</span>
+                      <span class="location">Location: Mile High Ballroom 1-2</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -815,7 +816,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">13:20pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -842,7 +843,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">1:55pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -865,7 +866,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">2:30pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -900,7 +901,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">3:40pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -925,7 +926,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">4:15pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -949,7 +950,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">4:50pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -999,7 +1000,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">8:30am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1013,7 +1014,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">8:40am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1035,7 +1036,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">9:15am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1059,7 +1060,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">9:50am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1094,7 +1095,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">11:00am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1119,7 +1120,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">11:35am</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1144,7 +1145,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">12:10pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1170,6 +1171,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">12:40pm</span>
+                      <span class="location">Location: Mile High Ballroom 1-2</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1180,7 +1182,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">1:40pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1204,7 +1206,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">2:15pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1230,7 +1232,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">2:50pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1272,7 +1274,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">4:00pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1299,7 +1301,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">4:35pm</span>
-                      <span class="location">Location: Main Theatre</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1325,7 +1327,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
-                      <span class="location">Location: Mile High Ballroom</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1342,7 +1344,7 @@
 <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">11:00am - 5:00pm</span>
-                      <span class="location">Location: Mile High Ballroom</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1355,7 +1357,6 @@
                       </div>
 				  </div>
 			  </div>
-			<div id="hackday-schedule" class="tab-pane schedule-tab schedule-item-tab">
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
@@ -1375,7 +1376,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 11:00am</span>
-                      <span class="location">Location: Mile High Ballroom</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -1424,7 +1425,7 @@
                          <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">Afternoon</span>
-                      <span class="location">Location: Mile High Ballroom</span>
+                      <span class="location">Location: Mile High Ballroom 3-4</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
